--- a/css/sidebar-content.css
+++ b/css/sidebar-content.css
@@ -4,15 +4,14 @@
     position: fixed;
     left: 0;
     bottom: 0;
-    overflow: hidden;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 42px 23px 23px;
     overflow: hidden;
+    padding: 42px 23px 23px;
     z-index: 1;
 }
 
